Fix Whitespace error and add bug report

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,7 +96,6 @@ main {
     text-align: center;
     border-top: 3px solid #1616E3;
     border-bottom: 3px solid #C80000;
-    position: absolute;
     bottom: 0;
 }
 
